# fl-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh  run_agent.sh  run_supplement.sh
configs/: diag_retfound_centralized.yaml  experiment_matrix.yaml  paper_matrix.yaml  paper_matrix_agent.yaml  paper_matrix_agent_odir.yaml  paper_matrix_agent_smoke.yaml  paper_matrix_agent_smoke3.yaml  paper_matrix_agent_stage1.yaml  paper_matrix_agent_supp.yaml  paper_matrix_full46_mlp.yaml  paper_matrix_gpu_full.yaml  paper_matrix_mu001.yaml  paper_matrix_odir.yaml  paper_matrix_pilot.yaml  paper_matrix_retfound_localcpu.yaml  paper_matrix_retfound_medium.yaml  paper_matrix_retfound_pilot.yaml  paper_matrix_robustness.yaml
docs/: AGENT_DESIGN.md  AGENT_EXPERIMENTS.md  AGENT_HANDOFF_STATUS.md  BRANCHING.md  DATA_CARD.md  ENVIRONMENT.md  EXPERIMENTS.md  FEDERATION.md  GITHUB_SETUP.md  GPU_RUN_CHECKLIST.md  PAPER_METHOD_AGENT.md  PAPER_OUTLINE.md  PROJECT_SCOPE.md  RESULTS_ASSESSMENT.md  RETFOUND_GPU_RUN.md  ROADMAP.md  SECOND_DATASET_ODIR.md  STATUS.md  SUPPLEMENT_RUN.md  SYNC.md
scripts/: agent_smoke.py  inspect_agent_run.py  publish.sh  push-current-branch.sh  push-github.sh  run_minimal_baseline.sh  run_numpy_ablations.sh  run_paper_full46_mlp.sh  run_paper_gpu.sh  run_paper_medium.sh  run_paper_pilot.sh  run_rfmid_subset_smoke.sh  run_synthetic_ablations.sh  smoke-torch.sh  smoke.sh  sync-from-remote.sh
tests/: test_agent_orchestrator.py  test_aggregators.py  test_build_splits_tool.py  test_experiment_report.py  test_fed_simulator.py  test_minimal_experiment.py  test_multilabel_metrics.py  test_noise_protocol.py  test_numpy_suite.py  test_paper_matrix_tools.py  test_paper_runner.py  test_partition.py  (+7 more)
(+129 files in other folders)
