[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fed-agent"
version = "0.1.5"
description = "Federated learning + lightweight agents for multi-label fundus tasks"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24.0",
  "PyYAML>=6.0.1",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
torch = ["torch>=2.1.0", "torchvision>=0.16.0"]
dev = ["ruff>=0.4.0", "pytest>=8.0.0", "Pillow>=10.0.0"]
data = ["datasets>=2.16.0", "huggingface_hub>=0.23.0"]
paper = ["timm>=1.0.0", "scikit-learn>=1.3.0", "matplotlib>=3.7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
